# pjproject

./: .clang-format  .editorconfig  .git-blame-ignore-revs  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  FUZZING.MD  INSTALL.txt  Makefile  PATCH-SUMMARY.md  PJSYSTEST.TXT  PJSYSTEST_RESULT.TXT  README-PATCH.md  README-configure  README.md  README.txt  RELNOTES.txt  SECURITY.md  aconfigure  aconfigure.ac  add-custom-srfx-candidates.patch  bb10-config.mak  build.mak  build.mak.in  build.mak.txt  build_iphone_and_simulator.sh  config.guess  config.sub  configure  configure-android  configure-bb10  configure-iphone  configure-legacy  format.sh  full-android-builder.sh  libpj.pc.in  libpjproject.pc.in  meson-sh  meson.build  (+33 more)
pjlib/: CMakeLists.txt
pjlib-util/: CMakeLists.txt
pjlib-util/docs/: doxygen.cfg  footer.html  header.html
pjlib-util/include/: pjlib-util.h
pjlib-util/include/pjlib-util/: base64.h  cli.h  cli_console.h  cli_imp.h  cli_telnet.h  config.h  crc32.h  dns.h  dns_server.h  errno.h  getopt.h  hmac_md5.h  hmac_sha1.h  http_client.h  json.h  md5.h  pcap.h  resolver.h  scanner.h  scanner_cis_bitwise.h  scanner_cis_uint.h  sha1.h  srv_resolver.h  string.h  stun.h  stun_auth.h  stun_doc.h  stun_endpoint.h  stun_msg.h  stun_server.h  stun_session.h  stun_simple.h  stun_transaction.h  turn_client.h  types.h  upnp.h  websock.h  xml.h
pjlib-util/include/pjutil/: stun.h
pjlib-util/src/pjlib-util/: base64.c  cli.c  cli_console.c  cli_telnet.c  crc32.c  dns.c  dns_dump.c  dns_server.c  errno.c  getopt.c  hmac_md5.c  hmac_sha1.c  http_client.c  json.c  md5.c  pcap.c  resolver.c  resolver_wrap.cpp  scanner.c  scanner_cis_bitwise.c  scanner_cis_uint.c  sha1.c  srv_resolver.c  string.c  stun.c  stun_auth.c  stun_client.c  stun_endpoint.c  stun_msg.c  stun_msg_dump.c  stun_server.c  stun_session.c  stun_simple.c  stun_simple_client.c  stun_transaction.c  symbols.c  upnp.c  websock.c  xml.c  xml_wrap.cpp
pjlib-util/src/pjlib-util-test/: encryption.c  http_client.c  json_test.c  main.c  main_rtems.c  resolver_test.c  stun.c  test.c  test.h  websock_test.c  xml.c
pjlib-util/src/pjstun-client/: client_main.c  stun_session.c  stun_session.h
pjlib-util/src/pjstun-srv/: server.h  server_main.c
pjlib-util/src/pjstun-srv-test/: bind_usage.c  main.c  server.c  server.h  server_main.c  turn_usage.c  usage.c
pjlib-util/src/pjutil/: stun_client.c
pjlib/docs/: doxygen.cfg  doxygen.css  footer.html  header.html
pjlib/include/: pjlib++.hpp  pjlib.h
pjlib/include/pj/: activesock.h  addr_resolv.h  argparse.h  array.h  assert.h  atomic_queue.h  atomic_slist.h  config.h  config_site.h  config_site_sample.h  config_site_stress.h  config_site_test.h  config_site_test_full.h  config_site_test_video.h  ctype.h  doxygen.h  equeue.h  errno.h  except.h  fifobuf.h  file_access.h  file_io.h  guid.h  hash.h  ioqueue.h  ip_helper.h  limits.h  list.h  list_i.h  lock.h  log.h  math.h  md5.h  os.h  pool.h  pool_alt.h  pool_buf.h  pool_i.h  rand.h  rbtree.h  (+14 more)
pjlib/include/pj++/: file.hpp  hash.hpp  list.hpp  lock.hpp  os.hpp  pool.hpp  proactor.hpp  scanner.hpp  sock.hpp  string.hpp  timer.hpp  tree.hpp  types.hpp
pjlib/src/: pjlib++.hpp  pjlib.h
pjlib/src/pj/: activesock.c  addr_resolv_linux_kernel.c  addr_resolv_sock.c  addr_resolv_symbian.cpp  array.c  array.h  array_i.h  atomic_queue.cpp  atomic_slist.c  compat.h  config.c  config.h  ctype.c  equeue_winnt.c  errno.c  except.c  except.h  exception_symbian.cpp  extra-exports.c  fifobuf.c  fifobuf.h  file_access_unistd.c  file_access_win32.c  file_io_ansi.c  file_io_win32.c  fwd.h  guid.c  guid.h  guid_android.c  guid_bsd.c  guid_darwin.c  guid_simple.c  guid_uuid.c  guid_win32.c  hash.c  hash.h  ioqueue.h  ioqueue_common_abs.c  ioqueue_common_abs.h  ioqueue_common_wakeup.c  (+119 more)
pjlib/src/pj++/: compiletest.cpp  hash.hpp  ioqueue.hpp  list.hpp  os.hpp  pj++.cpp  pool.hpp  proactor.cpp  proactor.hpp  scanner.hpp  sock.hpp  string.hpp  timer.hpp  tree.hpp  types.hpp
pjlib/src/pjlib++-test/: main.cpp
pjlib/src/pjlib-samples/: except.c  list.c  log.c
pjlib/src/pjlib-test/: activesock.c  atomic.c  atomic_slist.c  echo_clt.c  echo_srv.c  errno.c  exception.c  exception_wrap.cpp  fifobuf.c  file.c  grp_lock.c  hash_test.c  ioq_iocp_crash_test.c  ioq_iocp_unreg_test.c  ioq_perf.c  ioq_stress_test.c  ioq_tcp.c  ioq_udp.c  ioq_unreg.c  list.c  main.c  main_mod.c  main_rtems.c  main_symbian.cpp  main_win32.c  math.c  mutex.c  os.c  pool.c  pool_perf.c  pool_wrap.cpp  rand.c  rbtree.c  rtems_network_config.h  select.c  sleep.c  sock.c  sock_perf.c  ssl_sock.c  ssl_sock_stress.c  (+15 more)
pjlib/src/test/: exception_test.cpp  fifobuf_test.cpp  ioqueue_test.cpp  ioqueue_test_tcp.cpp  ioqueue_test_udp.cpp  libpj_test.h  list_test.cpp  main.cpp  os_test.cpp  pidf-diff.xml  pool_test.cpp  rbtree_test.cpp  timer_test.cpp  xml_test.cpp
pjmedia/: CMakeLists.txt
pjmedia/docs/: PJMEDIA.txt  doxygen.cfg  footer.html  header.html
pjmedia/include/: pjmedia-codec.h  pjmedia.h  pjmedia_audiodev.h  pjmedia_videodev.h
pjmedia/include/pjmedia-audiodev/: alsa.h  audiodev.h  audiodev_imp.h  audiotest.h  config.h  errno.h
pjmedia/include/pjmedia-codec/: aac.h  amr_helper.h  (+30 more)
pjmedia/src/: pjmedia.h
pjnath/: CMakeLists.txt
pjnath/docs/: UML-class-diagram.dia  doc_ice.h  doc_mainpage.h  doc_nat.h  doc_samples.h  doc_stun.h  doc_turn.h  doxygen.cfg  footer.html  header.html
pjnath/include/: pjnath.h
pjsip/: CMakeLists.txt
pjsip-apps/: CMakeLists.txt
pjsip/docs/: Arch-Class-Diagram.vsd  Arch.vsd  Callback-Design-Msg-Inside-Dialog.vsd  Callback-Design-Msg-Inside-Transaction.vsd  Callback-Design-Msg-Outside-Transaction-Outside-Dialog.vsd  Dialog-Base.vsd  Flow-Existing-Dialog.vsd  Flow-New-Dialog.vsd  PJSIP-Testing.doc  PJSIP-Users-Guide.doc  PJSUA-TESTING.txt  doxygen.cfg  doxygen.h  footer.html  header.html
pjsip/include/: pjsip.h  pjsip_auth.h  pjsip_core.h  pjsip_simple.h  pjsip_ua.h  pjsua2.hpp  sip_auth_parser.h
pjsip/src/: pjsip_auth.h  pjsip_core.h  pjsip_simple.h  pjsip_ua.h
tests/cmake/: CMakeLists.txt  test_consumer.c  test_consumer2.cpp
(+2630 files in other folders)
